--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=backend
 spring.datasource.url=jdbc:postgresql://localhost:5432/lab
 spring.datasource.username=postgres
-spring.datasource.password=test
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
